# nvidia-nims

./: README.md  pyproject.toml  requirements.txt
embeddings/: base.py  nvidia_embeddings.py
endpoints/: nvidia_endpoints.py
examples/: nvidia_embedding_example.py  nvidia_mistral_generation.py  nvidia_reranker_example.py
nvidia_services/embeddings/: nvidia_embeddings.py
nvidia_services/endpoints/: nvidia_endpoints.py
nvidia_services/models/: base.py  mistralai_models.py
nvidia_services/retrievals/: nvidia_reranker.py
retrievals/: base.py  nvidia_reranker.py
